--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@
 /local.properties
 /.idea/caches
 /.idea/libraries
+/.idea/misc.xml
+.idea/jarRepositories.xml
+/.idea/runConfigurations.xml
+/.idea/vcs.xml
 /.idea/modules.xml
 /.idea/workspace.xml
 /.idea/navEditor.xml
